--- a/tabla.html
+++ b/tabla.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="2.css">
+    <link rel="stylesheet" href="tabla.css">
     <title>Tabla personalizada</title>
   </head>
   <body>
@@ -25,6 +25,6 @@
      <button id="draw-lines-btn" class="boton">Graficar tabla</button>
        </p>
      <canvas width="600" height="400" id="canvas"></canvas>
-<script src="3.js"></script>
+<script src="tabla.js"></script>
 </body>
 </html>
